--- a/style.css
+++ b/style.css
@@ -1,77 +1,136 @@
-html,body{
-
-    margin: 0;
-
-    padding: 0;
-
+*{
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  font-family: "Open Sans",sans-serif;
 }
 
- 
-
-body{
-
-    font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
-
-    font-size: 100%;
-
-    background-color: #CCCCCC;
-
-    width: 100%;
-
-    text-align: center;
-
-}
-
- 
-
-.ust{
-
-    position: fixed;
+header{
+  position: fixed;
 
     width: 100%;
 
     height: 95px;
 
-    background-color: #ffd32a;
+    background-color: #2f3640;
 
     border-bottom: 1px solid #111;
 
     z-index: 2;
-
+  
 }
 
- 
+.inner-width{
+  max-width: 1000px;
+  padding: 0 10px;
+  margin: auto;
+}
 
-.orta{
+.logo{
+  float: left;
+  
+  padding: 25px;
+  height: 50px;
+  width: 120px;
+}
 
-    position: absolute;
+.logo img{
+  height: 50px;
+}
 
-    top: 350px;
+.navigation-menu{
+  float: right;
+  display: flex;
+  align-items: center;
+  min-height: 90px;
+}
+
+.navigation-menu a{
+  margin-left: 10px;
+  color: #ddd;
+  text-transform: uppercase;
+  font-size: 14px;
+  padding: 12px 20px;
+  border-radius: 4px;
+  transition: .3s linear;
+}
+
+.navigation-menu a:hover{
+  background: #fff;
+  color: #2f3640;
+  transform: scale(1.1);
+}
+
+.navigation-menu i{
+  margin-right: 8px;
+  font-size: 16px;
+}
+
+.home{
+  color: #ff6b6b;
+}
+
+.about{
+  color: #0abde3;
+}
+
+.works{
+  color: #feca57;
+}
+
+.team{
+  color: #5f27cd;
+}
+
+.contact{
+  color: #1dd1a1;
+}
+
+.menu-toggle-btn{
+  float: right;
+  height: 90px;
+  line-height: 90px !important;
+  color: #fff;
+  font-size: 26px;
+  display: none !important;
+  cursor: pointer;
+}
+
+
+@media screen and (max-width:700px) {
+  .menu-toggle-btn{
+    display: block !important;
+  }
+
+  .navigation-menu{
 
     width: 100%;
+    max-width: 400px;
+    background: #172b4d;
+    top: 90px;
+    right: 0;
+    display: none;
+    padding: 20px 40px;
+    box-sizing: border-box;
+  }
 
-    height: 800px;
+  .navigation-menu::before{
+    content: "";
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #172b4d;
+    position: absolute;
+    top: -10px;
+    right: 10px;
+  }
 
-    z-index: 1;
+  .navigation-menu a{
+    display: block;
+    margin: 10px 0;
+    float: right;
+  }
 
-}
-
-
-.İletisim a{
-    color: black;
-    font-size: 30px;
-    width: 60px;
-    margin-top: 30px;
-  float: right;
-  margin-right: 20px;
-}
-
-.İletisim :hover{
-    opacity: 0.8;
-    color: grey;
-}
-.İletisim img{
-    margin-top: 14px;
-    float: left;
-    margin-left: 20px;
+  .navigation-menu.active{
+    display: block;
+  }
 }
